sign in and login via firebase login and password

--- a/react-firebase-auth/src/Components/DefaultSignInTemplate/style.css
+++ b/react-firebase-auth/src/Components/DefaultSignInTemplate/style.css
@@ -5,6 +5,9 @@
     padding: 20px
 }
 
+.rfa-error-message{
+    color: red;
+}
 .rfa-default-sign-in-template__title{
     font-size: 30px;
     font-weight: bold;
